--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -36,11 +36,11 @@
         </form>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-xs-4">
             <cluster-list>
             </cluster-list>
         </div>
-        <div class="col-md-8">
+        <div class="col-xs-8">
             <node-list>
             </node-list>
         </div>
