--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -1,9 +1,14 @@
 <!doctype html>
-<html ng-app="viewer">
+<html lang="en" ng-app="viewer">
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+
     <script src="js/angular.min.js"></script>
     <script src="js/jquery.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <script src="js/bootstrap.min.js"></script>
 
     <!-- angular js app -->
     <script src="js/viewer.js"></script>
