--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en" ng-app="viewer">
 <head>
+    <title>Viewer</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -33,21 +34,23 @@
 </head>
 <body ng-controller="ClusterController as clusterCtrl">
 <div class="container">
-    <div class="row">
-        <h3>Viewer</h3>
-        <form ng-submit="clusterCtrl.add()">
-            <input type="text" ng-model="clusterCtrl.ip" size="30" value="{{clusterCtrl.ip}}">
-            <input class="btn-primary" type="submit" value="add">
-        </form>
-    </div>
-    <div class="row">
-        <div class="col-xs-4">
-            <cluster-list>
-            </cluster-list>
+    <div id="main">
+        <div class="row">
+            <h3>Viewer</h3>
+            <form ng-submit="clusterCtrl.add()">
+                <input type="text" ng-model="clusterCtrl.ip" size="30" value="{{clusterCtrl.ip}}">
+                <input class="btn-primary" type="submit" value="add">
+            </form>
         </div>
-        <div class="col-xs-8">
-            <node-list>
-            </node-list>
+        <div class="row">
+            <div class="col-xs-4">
+                <cluster-list>
+                </cluster-list>
+            </div>
+            <div class="col-xs-8">
+                <node-list>
+                </node-list>
+            </div>
         </div>
     </div>
 </div>
