--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -33,14 +33,16 @@
     </script>
 </head>
 <body ng-controller="ClusterController as clusterCtrl">
-<div class="container">
+<div class="container" style="width: 100%">
     <div id="main">
         <div class="row">
-            <h3>Viewer</h3>
-            <form ng-submit="clusterCtrl.add()">
-                <input type="text" ng-model="clusterCtrl.ip" size="30" value="{{clusterCtrl.ip}}">
-                <input class="btn-primary" type="submit" value="add">
-            </form>
+            <div class="col-xs-12">
+                <h3>Viewer</h3>
+                <form ng-submit="clusterCtrl.add()">
+                    <input type="text" ng-model="clusterCtrl.ip" size="30" value="{{clusterCtrl.ip}}">
+                    <input class="btn-primary" type="submit" value="add">
+                </form>
+            </div>
         </div>
         <div class="row">
             <div class="col-xs-4">
