Add log panel and capture exceptions

--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -45,14 +45,20 @@
             </div>
         </div>
         <div class="row">
-            <div class="col-xs-4">
-                <cluster-list>
-                </cluster-list>
+            <div class="col-xs-12">
+                <div class="col-xs-4">
+                    <cluster-list>
+                    </cluster-list>
+                </div>
+                <div class="col-xs-8">
+                    <node-list>
+                    </node-list>
+                </div>
             </div>
-            <div class="col-xs-8">
-                <node-list>
-                </node-list>
-            </div>
+        </div>
+        <div class="panel panel-info">
+            <div class="panel-heading">Log</div>
+            <div class="panel-body list-group" id="log"></div>
         </div>
     </div>
 </div>
