--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -24,6 +24,7 @@ under the License.
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/viewer.css">
 
     <script src="js/angular.min.js"></script>
     <script src="js/jquery.min.js"></script>
