Add log-list template and show failed urls

--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -75,9 +75,11 @@ under the License.
                 </div>
             </div>
         </div>
-        <div class="panel panel-info">
-            <div class="panel-heading">Log</div>
-            <div class="panel-body list-group" id="log"></div>
+        <div class="row">
+            <div class="col-xs-12">
+                <log-list>
+                </log-list>
+            </div>
         </div>
     </div>
 </div>
