--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -52,32 +52,37 @@ under the License.
     </script>
 </head>
 <body ng-controller="ClusterController as clusterCtrl">
-<div class="container" style="width: 100%">
-    <div id="main">
-        <div class="row">
-            <div class="col-xs-12">
-                <h3>Viewer</h3>
-                <form ng-submit="clusterCtrl.add()">
-                    <input type="text" ng-model="clusterCtrl.ip" size="30" value="{{clusterCtrl.ip}}">
-                    <input class="btn-primary" type="submit" value="add">
-                </form>
-            </div>
+<div class="container-fluid main" id="main">
+    <div class="row header">
+        <div class="col-xs-12">
+            <h3>Viewer
+            </h3>
+            <form class="form-inline" ng-submit="clusterCtrl.add()">
+                <div class="form-group">
+                    <label class="sr-only" for="aaa">Email address</label>
+                    <div class="input-group">
+                        <div class="input-group-addon">http://</div>
+                        <input type="text" class="form-control" ng-model="clusterCtrl.ip" size="30" value="{{clusterCtrl.ip}}" id="aaa">
+                    </div>
+                </div>
+                <button class="btn btn-primary" type="submit">Add New Cluster</button>
+            </form>
         </div>
-        <div class="row">
-            <div class="col-xs-4">
-                <cluster-list>
-                </cluster-list>
-            </div>
-            <div class="col-xs-8">
-                <node-list>
-                </node-list>
-            </div>
+    </div>
+    <div class="row cluster-view">
+        <div class="col-xs-4">
+            <cluster-list>
+            </cluster-list>
         </div>
-        <div class="row">
-            <div class="col-xs-12">
-                <log-list>
-                </log-list>
-            </div>
+        <div class="col-xs-8">
+            <node-list>
+            </node-list>
+        </div>
+    </div>
+    <div class="row log-view">
+        <div class="col-xs-12">
+            <log-list>
+            </log-list>
         </div>
     </div>
 </div>
