--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -59,7 +59,6 @@ under the License.
             </h3>
             <form class="form-inline" ng-submit="clusterCtrl.add()">
                 <div class="form-group">
-                    <label class="sr-only" for="aaa">Email address</label>
                     <div class="input-group">
                         <div class="input-group-addon">http://</div>
                         <input type="text" class="form-control" ng-model="clusterCtrl.ip" size="30" value="{{clusterCtrl.ip}}" id="aaa">
@@ -69,6 +68,7 @@ under the License.
             </form>
         </div>
     </div>
+    <div class="row" id="headerbar"></div>
     <div class="row cluster-view">
         <div class="col-xs-4">
             <cluster-list>
