Change cluster/node style

--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -84,16 +84,16 @@ under the License.
     </div>
     <div ui-layout-container id="main">
         <div ui-layout options="{ flow: 'column', dividerSize: 1, disableToggle: true }">
-            <div ui-layout-container size="20%" min-size="200px" id="sidebar">
+            <div ui-layout-container size="20%" min-size="200px" id="sidebar" style="padding:10px">
                 <cluster-list>
                 </cluster-list>
             </div>
-            <div ui-layout-container>
+            <div ui-layout-container style="padding:10px">
                 <node-list>
                 </node-list>
             </div>
-            <div ui-layout-container size="10%" min-size="200px">
-                <h5>Details</h5>
+            <div ui-layout-container size="10%" min-size="200px" style="padding:10px">
+                <div>DETAIL</div>
             </div>
         </div>
     </div>
