Add node-detail template and move details into detail pane.

--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -93,7 +93,8 @@ under the License.
                 </node-list>
             </div>
             <div ui-layout-container size="10%" min-size="200px" style="padding:10px">
-                <div>DETAIL</div>
+                <node-detail>
+                </node-detail>
             </div>
         </div>
     </div>
