Add license for CSS and change style

--- a/viewer/src/index.html
+++ b/viewer/src/index.html
@@ -89,13 +89,13 @@ under the License.
             </div>
         </div>
     </div>
-    <div ui-layout-container id="main">
+    <div ui-layout-container>
         <div ui-layout options="{ flow: 'column', dividerSize: 1, disableToggle: true }">
             <div ui-layout-container size="20%" min-size="200px" id="sidebar" style="padding:10px">
                 <cluster-list>
                 </cluster-list>
             </div>
-            <div ui-layout-container style="padding:10px">
+            <div ui-layout-container style="padding:10px" id="node-list">
                 <node-list>
                 </node-list>
             </div>
